2010-01-01  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtagmkII.c (jtagmkII_smc_init32): replace sleep() by usleep() for
	win32 compatibility.

2009-11-09  David Hoerl <dhoerl@mac.com>

	* fileio.c: ihex2bin did not properly handle files > 64K bytes
	* usb_libusb.c: re-enabled usb_reset for Macs (no reset causes lots of failures)
	* avrdude.1: spacing issue for avr32 fixed.

2009-11-09  Michal Ludvig  <mludvig@logix.net.nz>

	* buspirate.c: Implemented reset= and speed= extended parameters.
	* avrdude.1: Document the change.

2009-11-04  Michal Ludvig  <mludvig@logix.net.nz>

	* configure.ac, Makefile.am: Test if GCC accepts -Wno-pointer-sign

2009-11-04  Michal Ludvig  <mludvig@logix.net.nz>

	* buspirate.c: Implemented 'BinMode' support for
	  firmware 2.7 and higher.
	* avrdude.1: Added info about BusPirate.

2009-11-03  Michal Ludvig  <mludvig@logix.net.nz>

	* arduino.c: Add on to bug #26703 / patch #6866 - clear DTR/RTS
	  when closing the port.
	* Makefile.am: Silent warnings about signedness - they're useless
	  and annoying, especially for 'char' vars.

2009-10-22  David Hoerl <dhoerl@mac.com>

	* usb_libusb.c: disabled usb_reset for Macs (same as FreeBSD)

2009-10-12  Michal Ludvig  <mludvig@logix.net.nz>

	* main.c: Re-added default to serial port for BusPirate.

2009-10-12  David Hoerl <dhoerl@mac.com>

	*  main.c: removed some avr32 code that was pushed into jtagmkII.c
	*  jtagmkII.c: consolodated the avr32 reset code and avr32_chipreset
	*  avrpart.h: modified AVRPART flags for avr32
	*  lexer.l: added is_avr32 flag - only way to get yacc code to set flag
	*  avrdude.conf.in: updated avr32 section to include "is_avr32" flag

2009-10-12  David Hoerl <dhoerl@mac.com>

	*  config_gram.y: Restored inadvertantly removed buspirate entry
	*  lexer.l: Restored inadvertantly removed buspirate entry

2009-10-12  Michal Ludvig  <mludvig@logix.net.nz>

	* buspirate.c: Replace GNU-only %as with %s in sscanf call.